--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "@types/express": "^4.17.21",
+    "axios": "^1.7.2",
     "cookie-parser": "^1.4.6",
     "dockerode": "^4.0.2",
     "express": "^4.19.2",
